Add birthday countdown functionality by introducing BirthdayCalculator class, loading birthday data from JSON, and integrating countdowns into the main countdown manager. Update index.html to include the new script and add birthday data in birthdays.json.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <script src="scripts/utils/dateUtils.js"></script>
     <script src="scripts/utils/weekendCalculator.js"></script>
+    <script src="scripts/utils/birthdayCalculator.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html> 
