Enhance countdown display with improved card design, sorting logic, and icon integration

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Digital Countdown Display</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/components/countdown.css">
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
 </head>
 <body>
     <div class="container">
